2010-09-25  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/charset-map.c: According to rfc1557, it is suggested that
	euc-kr be used for headers since many Korean mailers cannot handle
	base64 or quoted-printable encoded iso-2022-kr. Based on this and
	bug #629235, I'm just going to drop iso-2022-kr.

2010-09-17  Jeffrey Stedfast  <fejj@novell.com>

	Based on a patch by Marek Łętowski

	* gmime/gmime-utils.c (g_mime_utils_header_decode_text): In the
	workaround case, if we don't find an end marker, reset our inptr
	to the beginning of the most recent word *plus 2* (to skip over
	the leading "=?"), not the beginning of the input text. Also need
	to reset our ascii state.
	(g_mime_utils_header_decode_phrase): In the workaround case, if we
	don't find an end marker, reset our inptr to the beginning of the
	most recent word *plus 2*, to skip over the leading "=?".

2010-09-16  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-encodings.c (g_mime_encoding_quoted_encode_close):
	If the last input character is not a \n, append an "=\n" sequence.

2010-09-13  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-charset.c: Mark known_iconv_charsets[] as
	static. Also mark string members of various private structs as
	const.

2010-09-06  Jeffrey Stedfast  <fejj@novell.com>

	* configure.ac: Bump glib version requirement for
	g_set_error_literal().

2010-09-02  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/internet-address.c (group_to_string): Don't crash if the
	group name is unset. Thanks to Damian Pietras for this patch.

2010-09-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (g_mime_utils_header_decode_phrase):
	Implement the same rfc2047-workaround hack as the one found in
	g_mime_utils_header_decode_text().

	* gmime/gmime-encodings.c (g_mime_encoding_base64_decode_step):
	Need to keep state to keep track of the number of ='s we've backed
	out over in case it crosses buffer boundaries.

2010-08-30  Jeffrey Stedfast  <fejj@novell.com>
