@@ -1,3 +1,9 @@
+2010-10-30  Jeffrey Stedfast  <fejj@novell.com>
+
+	* gmime/gmime-message.c (g_mime_message_guess_body): New function
+	to try and guess which part (or multipart/alternative) represents
+	the message body.
+
 2010-09-25  Jeffrey Stedfast  <fejj@novell.com>
 
 	* gmime/charset-map.c: According to rfc1557, it is suggested that
